web/css/style.css
/* ... */
  .subscribers h3 {
    margin-bottom: 15px;
    line-height: 1;
    font-size: 20px;
    color: #000;
    }
  .subscribers-list {
    margin: -10px 0 40px -10px;
    }
  .subscribers-item {
    display: inline-block;
    vertical-align: middle;
    margin: 10px 0 0 10px;
    font-size: 14px;
    }
  .subscribers-item-link {
    position: relative;
    padding-left: 20px;
    border: none;
    }
    .subscribers-item-link .fa-user {
      position: absolute;
      top: 1px;
      left: 0;
      z-index: 1;
      width: 14px;
      height: 14px;
      border: 1px solid #E1E2E3;
      border-radius: 50%;
      text-align: center;
      line-height: 1.2;
      font-size: 10px;
      color: #CCC;
      }
  .subscribers-item-img {
    position: absolute;
    top: 1px;
    left: 0;
    z-index: 2;
    width: 16px;
    height: 16px;
    background-size: cover;
    border-radius: 50%;
    }
  .subscribers-item-username {
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    color: #666;
    }
  .subscribers-item-link:hover .fa-user,
  .subscribers-item-link:hover .subscribers-item-username {
    border-color: rgba(224, 41, 41, 0.2);
    color: #E02929;
    }

/* Social
----------------------------------------------- */
.social {
  margin-top: 30px;
  }
.social-item {
  display: inline-block;
  vertical-align: top;
  }

/* Main
----------------------------------------------- */
.main {
  overflow: hidden;
  }
.main .header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  }
.main .header-logo {
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
  border-radius: 8px;
  }
.main .header-logo > a {
  top: 0;
  left: 0;
  width: 154px;
  height: 54px;
  }
.main .nav {
  position: absolute;
  top: 110px;
  left: 50%;
  margin-left: -97px;
  z-index: 2;
  }
.main .nav-list {
  padding: 6px 10px 6px 10px;
  }
.main .nav-item a {
  border: none;
  }
.main .content {
  text-align: center;
  }
.main .footer {
  position: fixed;
  bottom: -9px;
  z-index: 2;
  width: 100%;
  padding-top: 0;
  }
  .main .footer .stores {
    display: block;
    }
  .main .footer UL {
    background: #000;
    color: #CCC;
    }
  .main .footer A {
      border-color: #888;
      color: #CCC;
      }
    .main .footer A:hover {
      border-color: #CCC;
      color: #FFF;
      }

/* Profile
----------------------------------------------- */
.profile-nav {
  margin: 0 -10px 30px -10px;
  }
.profile-nav li {
  display: inline-block;
  vertical-align: top;
  line-height: 1;
  font-size: 16px;
  margin: 0 10px;
  }
  .profile-nav li a {
    margin: 0;
    }
  .profile-nav li a:hover {
    text-decoration: none;
    }
  .profile-nav li .simple {
    border: none;
    font-weight: bold;
    color: #333;
    }

/* Comments
----------------------------------------------- */
.comments {
  clear: both;
  padding-top: 30px;
  }
.comments:after,
.comment:after,
.comment-header:after,
.comments-inner:after {
  clear: both;
  display: block;
  height: 0;
  content: '';
  }
.article .comments-title,
.comments-title {
  font-size: 20px;
  }
.comments-inner {
  padding-top: 10px;
  }
.comment {
  margin-bottom: 20px;
  }
.comment-header {
  margin-bottom: 5px;
  }
.comment-user,
.comment-username,
.comment-date,
.comment-url,
.comment-trash {
  display: inline-block;
  vertical-align: middle
  }
.comment .comment-user {
  position: relative;
  width: 20px;
  height: 20px;
  margin-right: 5px;
  font-size: 12px;
  }
.comment .comment-user:before {
  position: absolute;
  top: 0;
  left: 0;
  width: 20px;
  height: 20px;
  border: 1px solid #E1E2E3;
  text-align: center;
  border-radius: 50%;
  box-sizing: border-box;
  line-height: 18px;
  color: #CCC;
  }
.comment-user-img {
  display: block;
  position: relative;
  width: 20px;
  height: 20px;
  overflow: hidden;
  border-radius: 50%;
  border: none;
  background-repeat: no-repeat;
  background-position: 50% 0;
  background-size: cover;
  }
.comment-username {
  margin-right: 5px;
  font-size: 14px;
  font-weight: 600;
  }
  .comment-username A {
    border: none;
    color: #000;
    }
  .comment-username A:hover {
    color: #E02929;
    }
.comment-date {
  margin-right: 10px;
  font-size: 12px;
  }
.comment-url,
.comment-trash {
  font-size: 14px;
  }
.comment-trash {
  margin-left: 8px;
  }
.comment-url A,
.comment-trash A {
  border: none;
  }
.comments-reply {
  padding-left: 20px;
  }
.comments-reply > .comments-reply > .comments-reply > .comments-reply > .comments-reply {
  padding-left: 0;
  }
.comment-options {
  margin-top: 5px;
  line-height: 1;
  font-size: 12px;
  }
.comment-options-item {
  display: inline-block;
  vertical-align: middle;
  margin-right: 10px;
  border-bottom-style: dotted;
  border-bottom-color: rgba(0, 85, 204, 0.4);
  }
.comment-options-item:hover {
  border-bottom-color: rgba(224, 41, 41, 0.4);
  }
.comment-my {
  padding: 10px;
  margin-bottom: 10px;
  background: #F9F9F3;
  border-radius: 5px;
  }
.comment-text {
  font-size: 14px;
  }
.comments-footer .comments-title {
  margin-bottom: 20px;
  }
.comments-footer .form-comment {
  padding-top: 0;
  margin-bottom: 20px;
  }
.comments-info {
  position: relative;
  padding: 20px 20px 20px 65px;
  margin-bottom: 20px;
  background: #FCF8E3;
  border-radius: 4px;
  font-size: 14px;
  color: #8A6D3B;
  }
  .comments-info .fa {
    position: absolute;
    top: 50%;
    left: 20px;
    margin-top: -15px;
    font-size: 30px;
    }
  .comments-info A {
    border-bottom-color: rgba(102, 81, 44, 0.2);
    font-weight: 600;
    color: #66512C;
    }
  .comments-info A:hover {
    border-bottom-color: rgba(224, 41, 41, 0.2);
    color: #E02929;
    }
.comments-load {
  text-align: center;
  }
  .comments-load .btn {
    height: 30px;
    padding: 0 15px;
    border-radius: 15px;
    font-size: 14px;
    }

/* Feed
----------------------------------------------- */
.feed {
  width: 800px;
  padding: 0;
  margin: 0 auto;
  text-align: center;
  }
.feed-list {
  display: inline-block;
  text-align: left;
  }
/* ... */

